update the img on social shares

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta property="og:description" content="Generation Peace, express yourself.." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://expressionsofpeace.org" />
-    <meta property="og:image" content="sample.png" />
+    <meta property="og:image" content="someone-express-peace.png" />
 
     <!-- Custom Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
